RaspberryPi/k3s-cluster/thermal_dtls_gateway/thermal-dtls-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thermal-dtls-gateway
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thermal-dtls-gateway
  template:
    metadata:
      labels:
        app: thermal-dtls-gateway
    spec:
      containers:
      - name: thermal-dtls-gateway
        image: docker.io/hjuohj/thermal-dtls-gateway:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5005
          protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: thermal-dtls-gateway-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: thermal-dtls-gateway
  ports:
  - name: dtls-udp
    protocol: UDP
    port: 5005
    targetPort: 5005
